// Vitest Snapshot v1

exports[`test slider rules prop 1`] = `
"<div class=\\"var-slider\\">
  <div class=\\"var-slider__block\\">
    <div class=\\"var-slider__track\\">
      <div class=\\"var-slider__track-background\\"></div>
      <div class=\\"var-slider__track-fill\\" style=\\"width: 0%; left: 0%;\\"></div>
    </div>
    <div class=\\"var-slider__thumb\\" style=\\"left: 0%;\\">
      <div class=\\"var-slider__thumb-block\\"></div>
      <div class=\\"var-slider__thumb-ripple\\"></div>
      <div class=\\"var-slider__thumb-label\\"><span>0</span></div>
    </div>
  </div>
  <transition-stub class=\\"var-slider__form\\" var-slider-cover=\\"\\">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test slider rules prop 2`] = `
"<div class=\\"var-slider\\">
  <div class=\\"var-slider__block\\">
    <div class=\\"var-slider__track\\">
      <div class=\\"var-slider__track-background\\"></div>
      <div class=\\"var-slider__track-fill\\" style=\\"width: 0%; left: 0%;\\"></div>
    </div>
    <div class=\\"var-slider__thumb\\" style=\\"left: 0%;\\">
      <div class=\\"var-slider__thumb-block\\"></div>
      <div class=\\"var-slider__thumb-ripple\\"></div>
      <div class=\\"var-slider__thumb-label\\"><span>NaN</span></div>
    </div>
  </div>
  <transition-stub class=\\"var-slider__form\\" var-slider-cover=\\"\\">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test slider style 1`] = `
"<div class=\\"var-slider\\">
  <div class=\\"var-slider__block\\" style=\\"height: 24px; margin: 0px 4px;\\">
    <div class=\\"var-slider__track\\">
      <div class=\\"var-slider__track-background\\" style=\\"background: rgb(58, 104, 180); height: 4px;\\"></div>
      <div class=\\"var-slider__track-fill\\" style=\\"width: 30%; left: 0%; background: rgb(224, 115, 44);\\"></div>
    </div>
    <div class=\\"var-slider__thumb\\" style=\\"left: 30%;\\">
      <div class=\\"var-slider__thumb-block\\" style=\\"background: rgb(226, 82, 65); height: 8px; width: 8px;\\"></div>
      <div class=\\"var-slider__thumb-ripple\\" style=\\"background: rgb(226, 82, 65); height: 0px; width: 0px;\\"></div>
      <div class=\\"var-slider__thumb-label\\" style=\\"background: purple; color: rgb(237, 237, 237); height: 16px; width: 16px;\\"><span>30</span></div>
    </div>
  </div>
  <transition-stub class=\\"var-slider__form\\" var-slider-cover=\\"\\">
    <!--v-if-->
  </transition-stub>
</div>"
`;
